Working awesomely on Paul Irish's demo page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
 
         // and log messages to the console
-        console && console.log && console.log.apply(console, args);
+        // console && console.log && console.log.apply(console, args);
       }
     }());
   </script>
