Some refactoring but this logic is starting to get confusing

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </head>
 <body>
   <p>
+    Inspired by Remy Sharp's Remote Tilt <a href="http://remote-tilt.com/">http://remote-tilt.com/</a>
+    <br/>
     Attribution to <a href="http://tbranyen.com/">Tim Branyen</a>, <a href="http://miketaylr.com">Mike Taylr</a>,  <a href="http://paulirish.com/">Paul Irish</a> &amp; <a href="//smus.com">Boris Smus</a> for multitouch canvas.
     <br/>
     <a href="http://paulirish.com/demo/multi">http://paulirish.com/demo/multi</a>
