--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     Touches can be created by holding the <u>Shift</u> key and clicking where additional touch points should go. Similarly, touches can be removed via the <u>Ctrl</u> key and clicking on the touch point to remove.
     <br/>
     To begin Mock Toucher, click the link below. Feel free to bookmark it as well as it as a bookmarklet.
-    <h3><a id="mockToucherLink" href="">Mock Toucher</a></h3>
+    <h3><a id="mockToucherLink" href="">Mock Toucher</a></h3><<h3><a id="mockToucherLink" href='javascript:(function(){var d=document,s=d.createElement("script"),t=document.getElementsByTagName("script")[0];s.async=true,s.src="//raw.github.com/twolfson/Mock-Toucher/master/mock.js";t.parentNode.insertBefore(s,t);}());void 0;'>GitHub Hosted Alternative</a></h3>
   </p>
   <script>
     function basePath(url) {
