Corrections to updated index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     /* Page styling */
     body {
       background: linen;
-    }
-
-    body {
       margin: 0;
       padding: 0;
     }
@@ -16,6 +13,11 @@
     canvas {
       background: white;
       border: 1px solid black;
+    }
+    
+    h3 {
+      display: inline-block;
+      margin: 0;
     }
   </style>
 </head>
@@ -30,8 +32,8 @@
     <br/>
     Touches can be created by holding the <u>Shift</u> key and clicking where additional touch points should go. Similarly, touches can be removed via the <u>Ctrl</u> key and clicking on the touch point to remove.
     <br/>
-    To begin Mock Toucher, click the link below. Feel free to bookmark it as well as it as a bookmarklet.
-    <h3><a id="mockToucherLink" href="">Mock Toucher</a></h3><<h3><a id="mockToucherLink" href='javascript:(function(){var d=document,s=d.createElement("script"),t=document.getElementsByTagName("script")[0];s.async=true,s.src="//raw.github.com/twolfson/Mock-Toucher/master/mock.js";t.parentNode.insertBefore(s,t);}());void 0;'>GitHub Hosted Alternative</a></h3>
+    To begin Mock Toucher, click one of the links below. Feel free to bookmark it as well as it as a bookmarklet.
+    <h3><a id="mockToucherLink" href="">Mock Toucher</a></h3>&nbsp;&nbsp;<h3><a id="mockToucherLink" href='javascript:(function(){var d=document,s=d.createElement("script"),t=document.getElementsByTagName("script")[0];s.async=true,s.src="//raw.github.com/twolfson/Mock-Toucher/master/mock.js";t.parentNode.insertBefore(s,t);}());void 0;'>GitHub Hosted Alternative</a></h3>
   </p>
   <script>
     function basePath(url) {
