Tweak for layout

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       background: white;
       border: 1px solid black;
     }
+    
+    h3 {
+      margin: 0;
+    }
   </style>
 </head>
 <body>
